# xcompress

./: .gitignore  Cargo.toml  README.md  backup_config.toml  go.mod  main.go
res_func/: res_func.go
src/: backup.rs  config.rs  help.rs  main.rs  restore.rs  utils.rs
