[package]
name = "xcompress"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
regex = "1.10"
dialoguer = "0.12"
console = "0.16"
fs_extra = "1.3"
lazy_static = "1.4.0"
indicatif = "0.18"